Closed Bug 1519126 Opened 5 years ago Closed 4 years ago

Intermittent GECKO(1168) | Assertion failure: !chunk->IsReady(), at /builds/worker/workspace/build/src/netwerk/cache2/CacheFile.cpp:2251

Categories

(Core :: Networking: Cache, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla74
Tracking Status
firefox-esr68 --- wontfix
firefox72 --- wontfix
firefox73 --- wontfix
firefox74 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: michal)

References

Details

(Keywords: assertion, intermittent-failure, Whiteboard: [necko-triaged])

Crash Data

Attachments

(1 file)

Filed by: btara [at] mozilla.com

https://treeherder.mozilla.org/logviewer.html#?job_id=221088598&repo=mozilla-inbound

https://queue.taskcluster.net/v1/task/OGo-Ap6pQiO3qXmAmy_dGw/runs/0/artifacts/public/logs/live_backing.log

06:13:05 INFO - TEST-START | dom/crypto/test/test_WebCrypto_ECDH.html
06:13:05 INFO - GECKO(1168) | --DOMWINDOW == 12 (0x11cec3c00) [pid = 1170] [serial = 2] [outer = 0x0] [url = about:blank]
06:13:05 INFO - GECKO(1168) | --DOMWINDOW == 11 (0x128f53800) [pid = 1170] [serial = 6] [outer = 0x0] [url = about:blank]
06:13:05 INFO - GECKO(1168) | ++DOMWINDOW == 12 (0x1275c8400) [pid = 1170] [serial = 14] [outer = 0x128f53400]
06:13:06 INFO - GECKO(1168) | Assertion failure: !chunk->IsReady(), at /builds/worker/workspace/build/src/netwerk/cache2/CacheFile.cpp:2251
06:14:37 INFO - GECKO(1168) | #01: mozilla::net::CacheFile::RemoveOutput(mozilla::net::CacheFileOutputStream*, nsresult) [netwerk/cache2/CacheFile.cpp:2099]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #02: mozilla::net::CacheFileOutputStream::CloseWithStatusLocked(nsresult) [netwerk/cache2/CacheFileOutputStream.cpp:218]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #03: mozilla::net::CacheFileOutputStream::CloseWithStatus(nsresult) [netwerk/cache2/CacheFileOutputStream.cpp:193]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #04: mozilla::net::AltDataOutputStreamParent::RecvClose() [netwerk/protocol/http/AltDataOutputStreamParent.cpp:54]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #05: mozilla::net::PAltDataOutputStreamParent::OnMessageReceived(IPC::Message const&) [ipc/glue/ProtocolUtils.h:375]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #06: mozilla::dom::PContentParent::OnMessageReceived(IPC::Message const&) [s3:gecko-generated-sources:72ad5592933cfb482d05e645b4ff51390327292aadfded7e611decef1b5b02811d47c3364bddd0995103353b87d1a3ea8ab69c57938a3a7de2c158ddedc1cf86/ipc/ipdl/PContentParent.cpp::3753]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #07: mozilla::ipc::MessageChannel::DispatchAsyncMessage(IPC::Message const&) [ipc/glue/MessageChannel.h:650]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #08: mozilla::ipc::MessageChannel::DispatchMessage(IPC::Message&&) [ipc/glue/MessageChannel.cpp:2086]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #09: mozilla::ipc::MessageChannel::RunMessage(mozilla::ipc::MessageChannel::MessageTask&) [ipc/glue/MessageChannel.cpp:0]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #10: mozilla::ipc::MessageChannel::MessageTask::Run() [xpcom/threads/Monitor.h:34]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #11: nsThread::ProcessNextEvent(bool, bool*) [xpcom/threads/nsThread.cpp:1144]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #12: NS_ProcessPendingEvents(nsIThread*, unsigned int) [xpcom/threads/nsThreadUtils.cpp:416]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #13: nsBaseAppShell::NativeEventCallback() [widget/nsBaseAppShell.cpp:88]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #14: nsAppShell::ProcessGeckoEvents(void*) [widget/cocoa/nsAppShell.mm:465]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #15: CoreFoundation + 0x80a01
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #16: CoreFoundation + 0x72b8d
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #17: CoreFoundation + 0x721bf
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #18: CoreFoundation + 0x71bd8
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #19: HIToolbox + 0x3256f
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #20: HIToolbox + 0x322ea
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #21: HIToolbox + 0x3212b
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #22: AppKit + 0x918ab
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #23: AppKit + 0x90e58
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #24: -[GeckoNSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] [widget/cocoa/nsAppShell.mm:0]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #25: AppKit + 0x86af3
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #26: nsAppShell::Run() [widget/cocoa/nsAppShell.mm:748]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #27: nsAppStartup::Run() [toolkit/components/startup/nsAppStartup.cpp:272]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #28: XREMain::XRE_mainRun() [toolkit/xre/nsAppRunner.cpp:4616]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #29: XREMain::XRE_main(int, char**, mozilla::BootstrapConfig const&) [toolkit/xre/nsAppRunner.cpp:4754]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #30: XRE_main(int, char**, mozilla::BootstrapConfig const&) [toolkit/xre/nsAppRunner.cpp:4839]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #31: main [browser/app/nsBrowserApp.cpp:214]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | Hit MOZ_CRASH(Aborting on channel error.) at /builds/worker/workspace/build/src/ipc/glue/MessageChannel.cpp:2527
06:14:37 INFO - GECKO(1168) | #01: mozilla::ipc::ProcessLink::OnChannelError() [xpcom/threads/Monitor.h:34]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #02: event_process_active_single_queue [ipc/chromium/src/third_party/libevent/event.c:1580]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #03: event_base_loop [ipc/chromium/src/third_party/libevent/event.c:1743]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #04: base::MessagePumpLibevent::Run(base::MessagePump::Delegate*) [ipc/chromium/src/base/message_pump_libevent.cc:0]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #05: MessageLoop::Run() [ipc/chromium/src/base/message_loop.cc:584]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #06: base::Thread::ThreadMain() [ipc/chromium/src/base/thread.cc:195]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #07: ThreadFunc(void*) [ipc/chromium/src/base/platform_thread_posix.cc:41]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #08: libsystem_pthread.dylib + 0x405a
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #09: libsystem_pthread.dylib + 0x3fd7
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | ** Unknown exception behavior: -2147483647
06:14:37 INFO - GECKO(1168) | Hit MOZ_CRASH(Aborting on channel error.) at /builds/worker/workspace/build/src/ipc/glue/MessageChannel.cpp:2527
06:14:37 INFO - GECKO(1168) | #01: mozilla::ipc::ProcessLink::OnChannelError() [xpcom/threads/Monitor.h:34]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #02: event_process_active_single_queue [ipc/chromium/src/third_party/libevent/event.c:1580]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #03: event_base_loop [ipc/chromium/src/third_party/libevent/event.c:1743]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #04: base::MessagePumpLibevent::Run(base::MessagePump::Delegate*) [ipc/chromium/src/base/message_pump_libevent.cc:0]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #05: MessageLoop::Run() [ipc/chromium/src/base/message_loop.cc:584]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #06: base::Thread::ThreadMain() [ipc/chromium/src/base/thread.cc:195]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #07: ThreadFunc(void*) [ipc/chromium/src/base/platform_thread_posix.cc:41]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #08: libsystem_pthread.dylib + 0x405a
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #09: libsystem_pthread.dylib + 0x3fd7
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | Hit MOZ_CRASH(Aborting on channel error.) at /builds/worker/workspace/build/src/ipc/glue/MessageChannel.cpp:2527
06:14:37 INFO - GECKO(1168) | #01: mozilla::ipc::ProcessLink::OnChannelError() [xpcom/threads/Monitor.h:34]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #02: event_process_active_single_queue [ipc/chromium/src/third_party/libevent/event.c:1580]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #03: event_base_loop [ipc/chromium/src/third_party/libevent/event.c:1743]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #04: base::MessagePumpLibevent::Run(base::MessagePump::Delegate*) [ipc/chromium/src/base/message_pump_libevent.cc:0]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #05: MessageLoop::Run() [ipc/chromium/src/base/message_loop.cc:584]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #06: base::Thread::ThreadMain() [ipc/chromium/src/base/thread.cc:195]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #07: ThreadFunc(void*) [ipc/chromium/src/base/platform_thread_posix.cc:41]
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #08: libsystem_pthread.dylib + 0x405a
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | #09: libsystem_pthread.dylib + 0x3fd7
06:14:37 INFO -
06:14:37 INFO - GECKO(1168) | ** Unknown exception behavior: -2147483647
06:14:37 INFO - GECKO(1168) | ** Unknown exception behavior: -2147483647
06:14:37 INFO - TEST-INFO | Main app process: exit 1
06:14:37 INFO - Buffered messages logged at 06:13:05
06:14:37 INFO - TEST-PASS | dom/crypto/test/test_WebCrypto_ECDH.html | Generate an ECDH key for named curve P-256
06:14:37 INFO - Buffered messages finished
06:14:37 ERROR - TEST-UNEXPECTED-FAIL | dom/crypto/test/test_WebCrypto_ECDH.html | application terminated with exit code 1
06:14:37 INFO - runtests.py | Application ran for: 0:01:43.980073
06:14:37 INFO - zombiecheck | Reading PID log: /var/folders/jw/trqrfq6103l2x0cr9n16qh1c00000w/T/tmps06MAbpidlog
06:14:37 INFO - ==> process 1168 launched child process 1169
06:14:37 INFO - ==> process 1168 launched child process 1170
06:14:37 INFO - ==> process 1168 launched child process 1171
06:14:37 INFO - zombiecheck | Checking for orphan process with PID: 1169
06:14:37 INFO - zombiecheck | Checking for orphan process with PID: 1170
06:14:37 INFO - zombiecheck | Checking for orphan process with PID: 1171
06:14:37 INFO - mozcrash Copy/paste: /Users/cltbld/tasks/task_1547127793/build/macosx64-minidump_stackwalk /var/folders/jw/trqrfq6103l2x0cr9n16qh1c00000w/T/tmpNmRxO9.mozrunner/minidumps/425BE86A-F754-4E19-AF37-146E215B46CB.dmp /Users/cltbld/tasks/task_1547127793/build/symbols
06:14:54 INFO - mozcrash Saved minidump as /Users/cltbld/tasks/task_1547127793/build/blobber_upload_dir/425BE86A-F754-4E19-AF37-146E215B46CB.dmp
06:14:54 INFO - mozcrash Saved app info as /Users/cltbld/tasks/task_1547127793/build/blobber_upload_dir/425BE86A-F754-4E19-AF37-146E215B46CB.extra
06:14:54 INFO - PROCESS-CRASH | dom/crypto/test/test_WebCrypto_ECDH.html | application crashed [@ mozilla::net::CacheFile::NotifyListenersAboutOutputRemoval()]
06:14:54 INFO - Crash dump filename: /var/folders/jw/trqrfq6103l2x0cr9n16qh1c00000w/T/tmpNmRxO9.mozrunner/minidumps/425BE86A-F754-4E19-AF37-146E215B46CB.dmp
06:14:54 INFO - Operating system: Mac OS X
06:14:54 INFO - 10.10.5 14F27
06:14:54 INFO - CPU: amd64
06:14:54 INFO - family 6 model 69 stepping 1
06:14:54 INFO - 4 CPUs
06:14:54 INFO -
06:14:54 INFO - GPU: UNKNOWN
06:14:54 INFO -
06:14:54 INFO - Crash reason: EXC_BAD_ACCESS / KERN_INVALID_ADDRESS
06:14:54 INFO - Crash address: 0x0
06:14:54 INFO - Process uptime: 13 seconds
06:14:54 INFO -
06:14:54 INFO - Thread 0 (crashed)
06:14:54 INFO - 0 XUL!mozilla::net::CacheFile::NotifyListenersAboutOutputRemoval() [CacheFile.cpp:65174e3014705687e7ca1050d5d1ffbe81126ac0 : 2251 + 0x0]
06:14:54 INFO - rax = 0x0000000116beb862 rdx = 0x00007fff7ac571f8
06:14:54 INFO - rcx = 0x000000010f5306b0 rbx = 0x0000000138533ae0
06:14:54 INFO - rsi = 0x00007d0000007d00 rdi = 0x00007c0000007d03
06:14:54 INFO - rbp = 0x00007fff50717770 rsp = 0x00007fff50717700
06:14:54 INFO - r8 = 0x00007fff507176b0 r9 = 0x00007fff7c15f300
06:14:54 INFO - r10 = 0x00007fff96d215d2 r11 = 0x00007fff96d21421
06:14:54 INFO - r12 = 0x00007fff50717718 r13 = 0x0000000132740000
06:14:54 INFO - r14 = 0x0000000138885190 r15 = 0x0000000138533be0
06:14:54 INFO - rip = 0x000000010fff7732
06:14:54 INFO - Found by: given as instruction pointer in context
06:14:54 INFO - 1 XUL!mozilla::net::CacheFile::RemoveOutput(mozilla::net::CacheFileOutputStream*, nsresult) [CacheFile.cpp:65174e3014705687e7ca1050d5d1ffbe81126ac0 : 2097 + 0x8]
06:14:54 INFO - rbp = 0x00007fff507177b0 rsp = 0x00007fff50717780
06:14:54 INFO - rip = 0x000000010fff705c
06:14:54 INFO - Found by: previous frame's frame pointer
06:14:54 INFO - 2 XUL!mozilla::net::CacheFileOutputStream::CloseWithStatusLocked(nsresult) [CacheFileOutputStream.cpp:65174e3014705687e7ca1050d5d1ffbe81126ac0 : 218 + 0x8]
06:14:54 INFO - rbp = 0x00007fff507177d0 rsp = 0x00007fff507177c0
06:14:54 INFO - rip = 0x000000011001dbc0
06:14:54 INFO - Found by: previous frame's frame pointer
06:14:54 INFO - 3 XUL!mozilla::net::CacheFileOutputStream::CloseWithStatus(nsresult) [CacheFileOutputStream.cpp:65174e3014705687e7ca1050d5d1ffbe81126ac0 : 193 + 0xb]
06:14:54 INFO - rbp = 0x00007fff50717810 rsp = 0x00007fff507177e0
06:14:54 INFO - rip = 0x000000011001e17f
06:14:54 INFO - Found by: previous frame's frame pointer
06:14:54 INFO - 4 XUL!mozilla::net::AltDataOutputStreamParent::RecvClose() [AltDataOutputStreamParent.cpp:65174e3014705687e7ca1050d5d1ffbe81126ac0 : 54 + 0x6]
06:14:54 INFO - rbp = 0x00007fff50717840 rsp = 0x00007fff50717820
06:14:54 INFO - rip = 0x00000001100948b5
06:14:54 INFO - Found by: previous frame's frame pointer
06:14:54 INFO - 5 XUL!mozilla::net::PAltDataOutputStreamParent::OnMessageReceived(IPC::Message const&) [PAltDataOutputStreamParent.cpp: : 141 + 0x9]
06:14:54 INFO - rbp = 0x00007fff507178e0 rsp = 0x00007fff50717850
06:14:54 INFO - rip = 0x000000011054be20
06:14:54 INFO - Found by: previous frame's frame pointer
06:14:54 INFO - 6 XUL!mozilla::dom::PContentParent::OnMessageReceived(IPC::Message const&) [PContentParent.cpp: : 3753 + 0xc]
06:14:54 INFO - rbp = 0x00007fff50717be0 rsp = 0x00007fff507178f0
06:14:54 INFO - rip = 0x000000011040d381
06:14:54 INFO - Found by: previous frame's frame pointer
06:14:54 INFO - 7 XUL!mozilla::ipc::MessageChannel::DispatchAsyncMessage(IPC::Message const&) [MessageChannel.cpp:65174e3014705687e7ca1050d5d1ffbe81126ac0 : 2159 + 0x9]
06:14:54 INFO - rbp = 0x00007fff50717c40 rsp = 0x00007fff50717bf0
06:14:54 INFO - rip = 0x0000000110308a99
06:14:54 INFO - Found by: previous frame's frame pointer
06:14:54 INFO - 8 XUL!mozilla::ipc::MessageChannel::DispatchMessage(IPC::Message&&) [MessageChannel.cpp:65174e3014705687e7ca1050d5d1ffbe81126ac0 : 2086 + 0xb]
06:14:54 INFO - rbp = 0x00007fff50717cf0 rsp = 0x00007fff50717c50
06:14:54 INFO - rip = 0x0000000110306b63
06:14:54 INFO - Found by: previous frame's frame pointer
06:14:54 INFO - 9 XUL!mozilla::ipc::MessageChannel::RunMessage(mozilla::ipc::MessageChannel::MessageTask&) [MessageChannel.cpp:65174e3014705687e7ca1050d5d1ffbe81126ac0 : 1935 + 0xb]
06:14:54 INFO - rbp = 0x00007fff50717d60 rsp = 0x00007fff50717d00
06:14:54 INFO - rip = 0x00000001103076b0
06:14:54 INFO - Found by: previous frame's frame pointer
06:14:54 INFO - 10 XUL!mozilla::ipc::MessageChannel::MessageTask::Run() [MessageChannel.cpp:65174e3014705687e7ca1050d5d1ffbe81126ac0 : 1966 + 0x8]
06:14:54 INFO - rbp = 0x00007fff50717d80 rsp = 0x00007fff50717d70
06:14:54 INFO - rip = 0x0000000110307d7a
06:14:54 INFO - Found by: previous frame's frame pointer
06:14:54 INFO - 11 XUL!nsThread::ProcessNextEvent(bool, bool*) [nsThread.cpp:65174e3014705687e7ca1050d5d1ffbe81126ac0 : 1157 + 0x6]
06:14:54 INFO - rbp = 0x00007fff507182e0 rsp = 0x00007fff50717d90
06:14:54 INFO - rip = 0x000000010fc1b12c
06:14:54 INFO - Found by: previous frame's frame pointer
06:14:54 INFO - 12 XUL!NS_ProcessPendingEvents(nsIThread*, unsigned int) [nsThreadUtils.cpp:65174e3014705687e7ca1050d5d1ffbe81126ac0 : 416 + 0xe]
06:14:54 INFO - rbp = 0x00007fff50718330 rsp = 0x00007fff507182f0
06:14:54 INFO - rip = 0x000000010fc18421
06:14:54 INFO - Found by: previous frame's frame pointer
06:14:54 INFO - 13 XUL!nsBaseAppShell::NativeEventCallback() [nsBaseAppShell.cpp:65174e3014705687e7ca1050d5d1ffbe81126ac0 : 87 + 0xa]
06:14:54 INFO - rbp = 0x00007fff50718360 rsp = 0x00007fff50718340
06:14:54 INFO - rip = 0x0000000113629baf
06:14:54 INFO - Found by: previous frame's frame pointer
06:14:54 INFO - 14 XUL!nsAppShell::ProcessGeckoEvents(void*) [nsAppShell.mm:65174e3014705687e7ca1050d5d1ffbe81126ac0 : 464 + 0x8]
06:14:54 INFO - rbp = 0x00007fff507183c0 rsp = 0x00007fff50718370
06:14:54 INFO - rip = 0x000000011369f2d9
06:14:54 INFO - Found by: previous frame's frame pointer
06:14:54 INFO - 15 CoreFoundation + 0x80a01
06:14:54 INFO - rbp = 0x00007fff507183d0 rsp = 0x00007fff507183d0
06:14:54 INFO - rip = 0x00007fff8da9da01
06:14:54 INFO - Found by: previous frame's frame pointer
06:14:54 INFO - 16 CoreFoundation + 0x72b8d
06:14:54 INFO - rbp = 0x00007fff50718430 rsp = 0x00007fff507183e0
06:14:54 INFO - rip = 0x00007fff8da8fb8d
06:14:54 INFO - Found by: previous frame's frame pointer
06:14:54 INFO - 17 CoreFoundation + 0x721bf
06:14:54 INFO - rbp = 0x00007fff50719110 rsp = 0x00007fff50718440
06:14:54 INFO - rip = 0x00007fff8da8f1bf
06:14:54 INFO - Found by: previous frame's frame pointer
06:14:54 INFO - 18 CoreFoundation + 0x71bd8
06:14:54 INFO - rbp = 0x00007fff50719170 rsp = 0x00007fff50719120
06:14:54 INFO - rip = 0x00007fff8da8ebd8
06:14:54 INFO - Found by: previous frame's frame pointer
06:14:54 INFO - 19 HIToolbox + 0x3256f
06:14:54 INFO - rbp = 0x00007fff507191b0 rsp = 0x00007fff50719180
06:14:54 INFO - rip = 0x00007fff941ea56f
06:14:54 INFO - Found by: previous frame's frame pointer
06:14:54 INFO - 20 HIToolbox + 0x322ea
06:14:54 INFO - rbp = 0x00007fff50719230 rsp = 0x00007fff507191c0
06:14:54 INFO - rip = 0x00007fff941ea2ea
06:14:54 INFO - Found by: previous frame's frame pointer
06:14:54 INFO - 21 HIToolbox + 0x3212b
06:14:54 INFO - rbp = 0x00007fff50719250 rsp = 0x00007fff50719240
06:14:54 INFO - rip = 0x00007fff941ea12b
06:14:54 INFO - Found by: previous frame's frame pointer
06:14:54 INFO - 22 AppKit + 0x918ab
06:14:54 INFO - rbp = 0x00007fff507196c0 rsp = 0x00007fff50719260
06:14:54 INFO - rip = 0x00007fff933f88ab
06:14:54 INFO - Found by: previous frame's frame pointer
06:14:54 INFO - 23 AppKit + 0x90e58
06:14:54 INFO - rbp = 0x00007fff50719960 rsp = 0x00007fff507196d0
06:14:54 INFO - rip = 0x00007fff933f7e58
06:14:54 INFO - Found by: previous frame's frame pointer
06:14:54 INFO - 24 XUL!-[GeckoNSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] [nsAppShell.mm:65174e3014705687e7ca1050d5d1ffbe81126ac0 : 180 + 0x2c]
06:14:54 INFO - rbp = 0x00007fff507199d0 rsp = 0x00007fff50719970
06:14:54 INFO - rip = 0x000000011369e2ae
06:14:54 INFO - Found by: previous frame's frame pointer
06:14:54 INFO - 25 AppKit + 0x86af3
06:14:54 INFO - rbp = 0x00007fff50719a50 rsp = 0x00007fff507199e0
06:14:54 INFO - rip = 0x00007fff933edaf3
06:14:54 INFO - Found by: previous frame's frame pointer
06:14:54 INFO - 26 XUL!nsAppShell::Run() [nsAppShell.mm:65174e3014705687e7ca1050d5d1ffbe81126ac0 : 743 + 0x1a]
06:14:54 INFO - rbp = 0x00007fff50719aa0 rsp = 0x00007fff50719a60
06:14:54 INFO - rip = 0x000000011369fc6f
06:14:54 INFO - Found by: previous frame's frame pointer
06:14:54 INFO - 27 XUL!nsAppStartup::Run() [nsAppStartup.cpp:65174e3014705687e7ca1050d5d1ffbe81126ac0 : 271 + 0x6]
06:14:54 INFO - rbp = 0x00007fff50719ac0 rsp = 0x00007fff50719ab0
06:14:54 INFO - rip = 0x0000000114f86df9
06:14:54 INFO - Found by: previous frame's frame pointer
06:14:54 INFO - 28 XUL!XREMain::XRE_mainRun() [nsAppRunner.cpp:65174e3014705687e7ca1050d5d1ffbe81126ac0 : 4616 + 0x6]
06:14:54 INFO - rbp = 0x00007fff50719c20 rsp = 0x00007fff50719ad0
06:14:54 INFO - rip = 0x0000000115105dab
06:14:54 INFO - Found by: previous frame's frame pointer
06:14:54 INFO - 29 XUL!XREMain::XRE_main(int, char**, mozilla::BootstrapConfig const&) [nsAppRunner.cpp:65174e3014705687e7ca1050d5d1ffbe81126ac0 : 4754 + 0x8]
06:14:54 INFO - rbp = 0x00007fff50719d00 rsp = 0x00007fff50719c30
06:14:54 INFO - rip = 0x0000000115106c2f
06:14:54 INFO - Found by: previous frame's frame pointer
06:14:54 INFO - 30 XUL!XRE_main(int, char**, mozilla::BootstrapConfig const&) [nsAppRunner.cpp:65174e3014705687e7ca1050d5d1ffbe81126ac0 : 4839 + 0x10]
06:14:54 INFO - rbp = 0x00007fff50719ea0 rsp = 0x00007fff50719d10
06:14:54 INFO - rip = 0x0000000115107c4d
06:14:54 INFO - Found by: previous frame's frame pointer
06:14:54 INFO - 31 firefox!main [nsBrowserApp.cpp:65174e3014705687e7ca1050d5d1ffbe81126ac0 : 214 + 0x13]
06:14:54 INFO - rbp = 0x00007fff5071a300 rsp = 0x00007fff50719eb0
06:14:54 INFO - rip = 0x000000010f4e5f10
06:14:54 INFO - Found by: previous frame's frame pointer
06:14:54 INFO - 32 libdyld.dylib + 0x35c9
06:14:54 INFO - rbp = 0x00007fff5071a310 rsp = 0x00007fff5071a310
06:14:54 INFO - rip = 0x00007fff96d215c9
06:14:54 INFO - Found by: previous frame's frame pointer

Whiteboard: [domsecurity-intermittent]
Component: DOM: Security → Networking: Cache
Whiteboard: [domsecurity-intermittent]

Michal, can you take a look?

Flags: needinfo?(michal.novotny)

Setting priority P3 due to low failure rate.

Assignee: nobody → michal.novotny
Flags: needinfo?(michal.novotny)
Priority: P5 → P3
Whiteboard: [necko-triaged]
Pushed by mnovotny@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/e2126c6434e0
Intermittent GECKO(1168) | Assertion failure: !chunk->IsReady() r=mayhemer
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla74
Crash Signature: [@ mozilla::net::CacheFile::NotifyListenersAboutOutputRemoval()]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: