Bug 1519126 - Intermittent GECKO(1168) | Assertion failure: !chunk->IsReady() r=mayhemer

Differential Revision: https://phabricator.services.mozilla.com/D58533

--HG--
extra : moz-landing-system : lando